--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -116,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rupiah" />
 
     <Button
-        android:id="@+id/clear"
+        android:id="@+id/btn_clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
