--- a/app/src/main/res/layout/fragment_laporan.xml
+++ b/app/src/main/res/layout/fragment_laporan.xml
@@ -128,11 +128,11 @@
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:text="Uang Sementara"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rad" />
 
@@ -145,7 +145,7 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rad" />
 
@@ -153,11 +153,11 @@
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:text="Pemasukan"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text1" />
 
@@ -170,7 +170,7 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uang_sementara" />
 
@@ -178,11 +178,11 @@
         android:id="@+id/text3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:text="Pengeluaran"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text2" />
 
@@ -195,7 +195,7 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uang_pemasukan" />
 
@@ -203,11 +203,11 @@
         android:id="@+id/text4"
         android:layout_width="86dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="24dp"
         android:text="Total Uang"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text3" />
 
@@ -220,7 +220,7 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uang_pengeluaran" />
 
@@ -228,11 +228,11 @@
         android:id="@+id/text5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
         android:text="Hutang"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text4" />
 
@@ -245,7 +245,7 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uang_total" />
 
@@ -253,11 +253,11 @@
         android:id="@+id/text6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:text="Total Uang Akhir"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text5" />
 
@@ -270,8 +270,17 @@
         android:text="Rp. -"
         android:textAlignment="textEnd"
         android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uang_hutang" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="_____________________________________________"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/uang_pengeluaran" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
