--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#002640</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="gradientA">#FFFFFF</color>
-    <color name="gradientB">#D6D6D6</color>
+    <color name="gradientB">#BCBCBC</color>
 </resources>
