--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -8,6 +8,6 @@
         android:endColor="@color/gradientB"
         android:angle="45"/>
     <corners
-        android:Radius="10dp" />
+        android:radius="7dp" />
     <stroke android:width="1dip" android:color="#5e7974" />
 </shape>
