--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -118,10 +118,10 @@
     <Button
         android:id="@+id/clear"
         android:layout_width="150dp"
-        android:layout_height="30dp"
+        android:layout_height="35dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/gradient"
+        android:background="@drawable/button"
         android:text="Clear Data"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
